kde4bindings (4:4.0.0-1) UNRELEASED; urgency=low

  * Initial upload.

 -- Adeodato Simó <dato@net.com.org.es>  Thu, 10 Jan 2008 12:17:30 +0100