@@ -2,23 +2,54 @@ Source: kde4bindings
 Section: kde
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
-Build-Depends: debhelper (>= 5), kdelibs5-dev (>> 4:4.0), python-all-dev, ..., ruby1.8-dev, ...
+Build-Depends: debhelper (>= 5), cmake, kdelibs5-dev (>> 4:4.0), libphonon-dev,
+ python, python-all-dev, sip4, python-sip4-dev, python-qt4-dev,
+ ruby1.8-dev,
 Uploaders: Vincent Fourmond <fourmond@debian.org>, Torsten Marek <shlomme@debian.org>, Adeodato Simó <dato@net.com.org.es>
+XS-Python-Version: >= 2.4
 Standards-Version: 3.7.3
 Homepage: http://www.kde.org
 
 Package: python-kde4
 Section: python
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+XB-Python-Version: ${python:Versions}
+Depends: ${shlibs:Depends}, ${python:Depends}, ${misc:Depends}
 Description: Python bindings for the KDE 4 libraries
- ...
+ This package contains PyKDE4, the Python bindings for the KDE 4
+ libraries, that allow you to write KDE programs using Python instead of
+ C++. It contains the following modules under the PyKDE4 namespace:
+ .
+  * kdecore
+  * kdeui
+  * khtml
+  * kio
+  * kparts
+  * ktexteditor
+  * kutils
+  * solid
+ .
+ This package provides modules for all supported Python versions.
 
-Package: libqt4-ruby1.8
-Section: interpreters
- ...
+Package: python-kde4-dev
+Section: python
+Architecture: all
+XB-Python-Version: ${python:Versions}
+Depends: ${python:Depends}, python-qt4
+Recommends: python-kde4
+Description: UIC compiler and SIP files for PyKDE4
+ This package contains pykdeuic4, a wrapper around PyQt's own UIC (user
+ interface compiler). It is needed to generate code from Qt Designer's
+ .uic files. You want to install this package if you are writing a PyKDE
+ application which has .uic files, or running one of these applications
+ from source.
+ .
+ It also contains the .sip files for PyKDE4, needed to build packages
+ with classes based on PyKDE.
 
-Package: libsmokeqt4-1
-Section: libs
- ...
-
+Package: python-kde4-doc
+Section: doc
+Architecture: all
+Description: documentation and examples for PyKDE4
+ This package contains documentation for PyKDE4, and some example code
+ showing how to use it.
