@@ -1,0 +1,1 @@
+debian/tmp/usr/share/doc/kde4/HTML/PyKDE4 usr/share/doc/python-kde4-doc/html
