@@ -1,0 +1,1 @@
+python/pykde4/README
