@@ -1,0 +1,2 @@
+debian/tmp/usr/lib/python2.*/site-packages/PyKDE4/*.so
+debian/tmp/usr/lib/python2.*/site-packages/PyKDE4/__init__.py
